--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"express": "^4.17.1",
 		"express-validator": "^6.11.1",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.12.12"
+		"mongoose": "^5.12.12",
+		"react-transition-group": "^4.4.2"
 	},
 	"devDependencies": {
 		"concurrently": "^6.2.0",
