--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"express-validator": "^6.11.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.12.12",
-		"react-transition-group": "^4.4.2"
+		"react-transition-group": "^4.4.2",
+		"redux-persist": "^6.0.0"
 	},
 	"devDependencies": {
 		"concurrently": "^6.2.0",
